@@ -1,3 +1,8 @@
+2008-02-09  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-installer.c: (gnome_theme_installer_run): make sure we're done
+	with the dialog before we destroy it (bug #515414)
+
 2008-02-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* data/appearance.glade: add a comment for translators (bug #514598)
